changing retention to 30 days

--- a/Atlassian-DB.template
+++ b/Atlassian-DB.template
@@ -135,6 +135,7 @@
         "AllocatedStorage": {
           "Ref": "DBStorage"
         },
+        "BackupRetentionPeriod": 30,
         "DBInstanceClass": {
           "Ref": "DBInstanceClass"
         },
