--- a/Atlassian.template
+++ b/Atlassian.template
@@ -597,7 +597,7 @@
             },
             "commands": {
               "chef": {
-                "commond": "chef-client -o recipe[ff_linux_base_wrapper::launch] -c /var/chef/solo.rb -z",
+                "command": "chef-client -o recipe[ff_linux_base_wrapper::launch] -c /var/chef/solo.rb -z",
                 "ignoreErrors": "false"
               },
               "001_yum_update": {
