adding IAM role for JIRA instances

--- a/Atlassian.template
+++ b/Atlassian.template
@@ -1243,7 +1243,16 @@
               ]
             },
             {
-              "Ref": "AWS::NoValue"
+              "Fn::Join": [
+                "",
+                [
+                  "arn:aws:iam::",
+                  {
+                    "Ref": "AWS::AccountId"
+                  },
+                  ":instance-profile/default-instances"
+                ]
+              ]
             }
           ]
         },
